kubernetes/traefik/03_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
    release: traefik
  name: traefik
  namespace: kube-system

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
      release: traefik
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: '8100'
        prometheus.io/scrape: 'true'
      labels:
        app: traefik
        release: traefik
    spec:
      containers:
        - args:
            - --api
            - --api.insecure
            - --api.dashboard=true
            - --accesslog
            - --global.checknewversion=true
            - --entryPoints.traefik.address=:8100
            - --entryPoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --metrics.prometheus=true
            # permanent redirecting of all requests on http (80) to https (443)
            #- --entrypoints.web.http.redirections.entryPoint.to=websecure
            - --entrypoints.websecure.http.tls.certResolver=le
            # Let's Encrypt Configurtion:
            # Please note that this is the staging Let's Encrypt server configuration.
            # Once you get things working, you should remove that following line.
            - --certificatesresolvers.le.acme.caserver=https://acme-v02.api.letsencrypt.org/directory
            - --certificatesresolvers.le.acme.email=kolja.dummann@logv.ws
            - --certificatesresolvers.le.acme.storage=/var/lib/traefik/acme.json
            - --certificatesresolvers.le.acme.dnschallenge=true
            - --certificatesresolvers.le.acme.dnschallenge.provider=scaleway
            - --entrypoints.websecure.http.tls.domains[0].main=skadi.cloud
            - --entrypoints.websecure.http.tls.domains[0].sans=*.wolves.skadi.cloud,www.skadi.cloud
            - --entrypoints.web.http.redirections.entrypoint.to=websecure"
            - --entrypoints.web.http.redirections.entrypoint.scheme=https"
            - --ping=true
            - --providers.kubernetescrd=true
            - --providers.kubernetesingress=true
            - --log.level=INFO
          image: traefik:2.4
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 20Mi
          volumeMounts:
          - name: traefik-data
            mountPath: /var/lib/traefik
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8100
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: traefik
          ports:
            - containerPort: 8100
              name: admin
              protocol: TCP
            - containerPort: 80
              name: web
              protocol: TCP
            - containerPort: 443
              name: websecure
              protocol: TCP
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ping
              port: 8100
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: traefik
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      volumes:
        - name: traefik-data
          persistentVolumeClaim:
            claimName: traefik-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    release: traefik
  name: traefik
  namespace: kube-system
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    release: traefik
  name: traefik-admin
  namespace: kube-system
spec:
  ports:
    - name: admin
      port: 8100
      protocol: TCP
      targetPort: 8100
  selector:
    app: traefik
    release: traefik
